My Interwebz Thoughts

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
+    <p>
+    I think the thing I find most impressive about where the web started is the amount of collaboration it took.  I also distinctly remember having a computer in my house in the 90s and being blown away by what we'd now consider primitive flash animations and early viral videos.  In 2007 my brothers both had the first iPhone and the rest of my family was skeptical that someone could have a full browsing experience on their phone but as I type this with my iPhone 7 next to me I realize I'm not the best predictor of technological advancement.  In the future I think we'll see people given the ability to view pages exactly as they prefer to see them, from the person who wants all the flash animations to the person who only wants plain black and white text.
+    </p>
   </body>
 </html>
